--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/hafalana/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/hafalana/frontend-project-44/actions)",
-  "main": "index.js",
   "type": "module",
   "bin": {
-  "brain-games": "bin/brain-games.js"
-},
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+  
+  }
 }
