--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-  
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0"
   }
 }
