--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "eslint": "^9.14.0",
-    "globals": "^15.12.0"
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3"
   }
 }
