--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
     "@eslint/js": "^9.14.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "prettier": "^3.3.3"
   }
